--- a/style.css
+++ b/style.css
@@ -30,7 +30,8 @@ nav {
 }
 
 .nav-left,
-.nav-right {
+.nav-right,
+.nav-left-corner {
     display: flex;
     align-items: center;
 }
@@ -40,9 +41,15 @@ nav {
     display: inline-block;
     justify-content: space-between;
 }
+.user-profile-1 {
+    display: flex;
+}
 
-.nav-left ul li img {
+.user-profile-1 img {
+
+    width: 7%;
     margin: 0 15px;
+    border-radius: 50%;
 }
 
 .search-box {
@@ -321,7 +328,7 @@ nav {
 }
 
 .user-profile img {
-    width: 15%;
+    width: 7%;
     border-radius: 50%;
     margin-right: 10px;
 }
@@ -455,4 +462,22 @@ nav {
 .post-row i {
     margin-right: 20px;
     color: rgba(165, 42, 42, 0.502);
+}
+.load-more-btn {
+    display: block;
+    margin: auto;
+    cursor: pointer;
+    padding: 5px 10px;
+    border: 1px solid rgba(165, 42, 42, 0.502);
+    color: #626262;
+    background: transparent;
+    border-radius: 4px;
+}
+
+.footer {
+    text-align: center;
+    display: block;
+    margin: center;
+    font-size: 12px;
+    color: #626262;
 }
